Updated Web Page Display
Added centering of form using formcontent DIV css group.  Added
documentation sections to "Input Terms" (termlist-submission-form) and
"Synset View" (synset-list-page) page views.  "Input View" now uses
modified CSS group formcontent for centering.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -14,6 +14,10 @@ h2 { width: 100%; margin-top: 1em; color: #44a;
     display: block;
     margin: 10 auto;
 }
+#formcontent {
+    text-align: center
+}
+
 .known {
     background-color: #0AF; 
     background-color: rgba(0, 167, 255, 0.5);
