--- a/resources/public/css/base.css
+++ b/resources/public/css/base.css
@@ -2,7 +2,7 @@ body { position: relative;
        margin: 5px 10px; padding: 5px 10px;
        font-family:'Droid Sans',Arial,Helvetica,sans-serif;
 }
-
+em { color: red }
 #content { border: solid; border-radius: 10px; background: white; padding: 15px; margin-bottom: 5px; }
 
 // @media screen and (min-width: 2000px) { }
